crates/rustereum/tests/ui/fn_param.stderr
error: rustereum: function parameters are not supported in v1
  --> tests/ui/fn_param.rs:10:27
   |
10 |     pub fn set(&mut self, x: u256) {
   |                           ^^^^^^^

warning: unused variable: `x`
  --> tests/ui/fn_param.rs:10:27
   |
10 |     pub fn set(&mut self, x: u256) {
   |                           ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
